--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,32 @@
 baseURL: https://fiae.lna-dev.com
 languageCode: de
+defaultContentLanguage: de
 title: Fachinformatiker-Prüfungsvorbereitung
 
 theme: docsy
+
+github_repo: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
+github_project_repo: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
+github_branch: "dev"
+
+offlineSearch: true
+offlineSearchMaxResults: 25
+algolia_docsearch: false
+
+menu:
+  main:
+    - name: GitHub
+      weight: 50
+      url: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
+      pre: <i class="fa-brands fa-github"></i>
+
+outputs:
+  section:
+    - HTML
+    - RSS
+    - print
+
+sitemap:
+  changefreq: monthly
+  filename: sitemap.xml
+  priority: 0.5
