--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 # Basics
-baseURL: https://fiae.lna-dev.com
+baseURL: https://fi.lna-dev.net
 title: Fachinformatiker-Prüfungsvorbereitung
 theme: docsy
 enableGitInfo: true
