--- a/.github/workflows/HugoBuildAndDeploy.yaml
+++ b/.github/workflows/HugoBuildAndDeploy.yaml
@@ -20,6 +20,12 @@ jobs:
       # Install Hugo
       - run: sudo snap install hugo
 
+      # Install Go
+      - uses: actions/setup-go@v3
+        # with:
+        #   go-version: '^1.13.1' # The Go version to download (if necessary) and use.
+      - run: go version
+
       # Install dependencies
       - run: npm install -D autoprefixer
         working-directory: ./${{ env.NAME }}/
