--- a/.github/workflows/HugoBuildDev.yaml
+++ b/.github/workflows/HugoBuildDev.yaml
@@ -22,8 +22,8 @@ jobs:
 
       # Install Go
       - uses: actions/setup-go@v3
-        # with:
-        #   go-version: '^1.13.1' # The Go version to download (if necessary) and use.
+        with:
+          go-version: '^1.19' # The Go version to download (if necessary) and use.
       - run: go version
 
       # Install dependencies
