--- a/.github/workflows/HugoBuildDev.yaml
+++ b/.github/workflows/HugoBuildDev.yaml
@@ -21,10 +21,7 @@ jobs:
       - run: sudo snap install hugo
 
       # Install Go
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '^1.19' # The Go version to download (if necessary) and use.
-      - run: go version
+      - run: sudo apt install golang
 
       # Install dependencies
       - run: npm install -D autoprefixer
