--- a/.github/workflows/HugoBuildDev.yaml
+++ b/.github/workflows/HugoBuildDev.yaml
@@ -21,7 +21,10 @@ jobs:
       - run: sudo snap install hugo
 
       # Install Go
-      - run: sudo apt install golang
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.19' # The Go version to download (if necessary) and use.
+      - run: go version
 
       # Install dependencies
       - run: npm install -D autoprefixer
