--- a/.github/workflows/HugoBuildDev.yaml
+++ b/.github/workflows/HugoBuildDev.yaml
@@ -26,6 +26,8 @@ jobs:
           go-version: '1.19' # The Go version to download (if necessary) and use.
       - run: go version
 
+      - run: export PATH=$PATH:/usr/local/go/bin
+
       # Install dependencies
       - run: npm install -D autoprefixer
         working-directory: ./${{ env.NAME }}/
