--- a/.github/workflows/HugoBuildAndDeploy.yaml
+++ b/.github/workflows/HugoBuildAndDeploy.yaml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Install Hugo
-      - run: sudo snap install hugo
+      - name: Hugo setup
+        uses: peaceiris/actions-hugo@v2.4.13
 
       # Install dependencies
       - run: npm install -D autoprefixer
