--- a/config.yml
+++ b/config.yml
@@ -73,7 +73,10 @@ menu:
       weight: 50
       url: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
       pre: <i class="fab fa-github"></i>
-      desc: Development takes place here
+    - name: Datenschutz
+      weight: 10
+      url: "./privacypolicy"
+      # pre: <i class="fab fa-github"></i>
 
 # Outputs
 outputs:
