--- a/config.yml
+++ b/config.yml
@@ -33,10 +33,10 @@ params:
         url: "https://www.fachinformatiker.de/topic/171869-pr%C3%BCfungsvorbereitungs-zusammenfassungs-projekt-auf-github/"
         icon: "fa fa-handshake"
       - name: "Impressum"
-        url: "https://lna-dev.com/LegalDetails"
+        url: "https://lna-dev.net/LegalDetails"
         icon: "fa fa-gavel"
   copyright: "The Fachinformatiker-Prüfungsvorbereitung Authors"
-  privacy_policy: "https://lna-dev.com/PrivacyPolicy/"
+  privacy_policy: "https://lna-dev.net/PrivacyPolicy/"
   ui:
     readingTime:
       enable: true
