updated domain name

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 # Basics
-baseURL: https://fi.lna-dev.net
+baseURL: https://fachinformatiker-prüfungsvorbereitung.de
 title: Fachinformatiker-Prüfungsvorbereitung
 # theme: github.com/google/docsy
 enableGitInfo: true
