--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # Basics
 baseURL: https://fachinformatiker-prüfungsvorbereitung.de
-title: Fachinformatiker-Prüfungsvorbereitung
+title: Fachinformatiker Prüfungsvorbereitung
 # theme: github.com/google/docsy
 enableGitInfo: true
 
