--- a/Kubernetes/Fachinformatiker-Prüfungsvorbereitung.yaml
+++ b/Kubernetes/Fachinformatiker-Prüfungsvorbereitung.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: fi-pv
-          image: lnadev/fi-pv:latest
+          image: lnadev/fi-pv:46
           imagePullPolicy: Always
           resources:
             limits:
