--- a/Kubernetes/Fachinformatiker-Prüfungsvorbereitung.yaml
+++ b/Kubernetes/Fachinformatiker-Prüfungsvorbereitung.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: fi-pv
-          image: lnadev/fi-pv:50
+          image: lnadev/fi-pv:51
           imagePullPolicy: Always
           resources:
             limits:
@@ -47,22 +47,11 @@ metadata:
     traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
 spec:
   tls:
-  - hosts:
-    - 'xn--fachinformatiker-prfungsvorbereitung-w0d.de'
-    - 'fachinformatikerpruefungsvorbereitung.de'
-    - 'www.fachinformatikerpruefungsvorbereitung.de'
-    secretName: fi-pv-cert
+    - hosts:
+        - "fachinformatikerpruefungsvorbereitung.de"
+        - "www.fachinformatikerpruefungsvorbereitung.de"
+      secretName: fi-pv-cert
   rules:
-    - host: xn--fachinformatiker-prfungsvorbereitung-w0d.de
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: fi-pv-service
-                port:
-                  number: 80
     - host: fachinformatikerpruefungsvorbereitung.de
       http:
         paths:
@@ -85,15 +74,19 @@ spec:
                   number: 80
 
 ---
-# Needed because of HTTP to HTTPS redirecting
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: fi-pv-ingress-http
+  name: fi-pv-redirection-ingress
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
-    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
+    cert-manager.io/cluster-issuer: letsencrypt
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.middlewares: default-redirectschemefipv@kubernetescrd
 spec:
+  tls:
+    - hosts:
+        - "xn--fachinformatiker-prfungsvorbereitung-w0d.de"
+      secretName: fi-pv-cert-fipv
   rules:
     - host: xn--fachinformatiker-prfungsvorbereitung-w0d.de
       http:
@@ -105,6 +98,18 @@ spec:
                 name: fi-pv-service
                 port:
                   number: 80
+
+---
+# Needed because of HTTP to HTTPS redirecting
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: fi-pv-ingress-http
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
+spec:
+  rules:
     - host: fachinformatikerpruefungsvorbereitung.de
       http:
         paths:
@@ -134,5 +139,16 @@ metadata:
 spec:
   redirectRegex:
     regex: '^https?://(?:www\.)?(.+)'
-    replacement: 'https://${1}'
+    replacement: "https://${1}"
+    permanent: true
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: redirectschemefipv
+spec:
+  redirectRegex:
+    regex: '.*'
+    replacement: "https://fachinformatikerpruefungsvorbereitung.de"
     permanent: true
