Hiding server version

--- a/Docker/nginx.conf
+++ b/Docker/nginx.conf
@@ -23,6 +23,8 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
+    server_tokens off;
+
     gzip on;
     gzip_disable "msie6";
 
