--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 # Basics
-baseURL: https://fachinformatiker-prüfungsvorbereitung.de
+baseURL: https://fachinformatikerpruefungsvorbereitung.de
 title: Fachinformatiker Prüfungsvorbereitung
 # theme: github.com/google/docsy
 enableGitInfo: true
