Added YouTube Videos

--- a/config.yml
+++ b/config.yml
@@ -101,3 +101,28 @@ sitemap:
 enableRobotsTXT: true
 
 googleAnalytics: G-NWTWYPN52Z
+
+# Privacy
+
+privacy:
+  # disqus:
+  #   disable: false
+  # googleAnalytics:
+  #   anonymizeIP: false
+  #   disable: false
+  #   respectDoNotTrack: false
+  #   useSessionStorage: false
+  # instagram:
+  #   disable: false
+  #   simple: false
+  # twitter:
+  #   disable: false
+  #   enableDNT: false
+  #   simple: false
+  # vimeo:
+  #   disable: false
+  #   enableDNT: false
+  #   simple: false
+  youtube:
+    disable: false
+    privacyEnhanced: true
