--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ enableGitInfo: true
 # Modules
 module:
   imports:
-    - path: github.com/LNA-DEV/PrivateDocsy
+    - path: github.com/Fedodo/Fedodo.Docs.Theme
     - path: github.com/google/docsy/dependencies
 
 # Content
@@ -31,7 +31,7 @@ params:
   links:
     user:
       - name: "GitHub"
-        url: "https://github.com/LNA-DEV/Fachinformatiker-Pruefungsvorbereitung"
+        url: "https://github.com/Fachinformatiker-Prufungsvorbereitung/Fachinformatiker-Pruefungsvorbereitung"
         icon: "fab fa-github"
       - name: "Fachinformatiker.de Post"
         url: "https://www.fachinformatiker.de/topic/171869-pr%C3%BCfungsvorbereitungs-zusammenfassungs-projekt-auf-github/"
@@ -53,8 +53,8 @@ params:
   prism_syntax_highlighting: false
 
   # GitHub
-  github_repo: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
-  github_project_repo: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
+  github_repo: "https://github.com/Fachinformatiker-Prufungsvorbereitung/Fachinformatiker-Pruefungsvorbereitung"
+  github_project_repo: "https://github.com/Fachinformatiker-Prufungsvorbereitung/Fachinformatiker-Pruefungsvorbereitung"
   github_branch: "dev"
 
   mermaid:
@@ -91,7 +91,7 @@ menu:
       pre: <i class="fa fa-credit-card"></i>
     - name: GitHub
       weight: 50
-      url: "https://github.com/LNA-DEV/Fachinformatiker-Anwendungsentwicklung-Pruefungsvorbereitung"
+      url: "https://github.com/Fachinformatiker-Prufungsvorbereitung/Fachinformatiker-Pruefungsvorbereitung"
       pre: <i class="fab fa-github"></i>
 
 # Outputs
