--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:latest
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./deployment/nginx.conf /etc/nginx/nginx.conf
 
-COPY ../public /usr/share/nginx/html/
+COPY ./public /usr/share/nginx/html/
