👷 Updated release pipe

--- a/.github/workflows/HugoBuildAndDeploy.yaml
+++ b/.github/workflows/HugoBuildAndDeploy.yaml
@@ -97,5 +97,12 @@ jobs:
       # Checkout the repository
       - uses: actions/checkout@v3
 
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "{{RUN_NUMBER}}"
+          replace: ${{ github.run_number }}
+          regex: false
+
       # Deploy Kubernetes YAML
       - run: kubectl apply -f ./Kubernetes/Fachinformatiker-Prüfungsvorbereitung.yaml --kubeconfig ${{ steps.write_file.outputs.filePath }}
