--- a/deployment/Fachinformatiker-Prüfungsvorbereitung.yaml
+++ b/deployment/Fachinformatiker-Prüfungsvorbereitung.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: fi-pv
-          image: lnadev/fi-pv:86
+          image: lnadev/fi-pv:{{RUN_NUMBER}}
           imagePullPolicy: Always
           resources:
             limits:
