🚸 Added aliases for new structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Amortisationsdauer",
         "Nachfrageoligopol",
-        "peaceiris"
+        "peaceiris",
+        "projektae"
     ]
 }
