✨ Improved SI content

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,16 @@
     "cSpell.words": [
         "abschlussprüfungteil",
         "Amortisationsdauer",
+        "Computingumgebung",
+        "Dalwigk",
+        "hervorsehbare",
+        "Kommazahlen",
+        "Loadbalancer",
         "Nachfrageoligopol",
         "peaceiris",
-        "projektae"
+        "projektae",
+        "Skalierungsmethoden",
+        "Subnetting",
+        "Systemintegratöre"
     ]
 }
