🍱 Small improvements to Netzwerktopologien

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "hervorsehbare",
         "Kommazahlen",
         "Loadbalancer",
+        "Nachfolgerstation",
         "Nachfrageoligopol",
+        "Netzwerktopologien",
         "peaceiris",
         "projektae",
         "Skalierungsmethoden",
