Improved Backuparten and fixed copyright issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "abschlussprüfungteil",
         "Amortisationsdauer",
+        "Backupverfahren",
         "Computingumgebung",
         "Dalwigk",
         "hervorsehbare",
