Revert "Updated pipes"
This reverts commit 69ba085e04ab03dbe98850159a747fa7c0a0e53a.

--- a/.github/workflows/HugoBuildAndDeploy.yaml
+++ b/.github/workflows/HugoBuildAndDeploy.yaml
@@ -68,3 +68,22 @@ jobs:
 
       - name: Push the image to dockerhub
         run: docker push lnadev/${{ env.CONTAINER-NAME }}:latest
+
+  DeployContainer:
+    needs: ReleaseVersion
+    runs-on: ubuntu-latest
+
+    steps:
+      # Download Secure-File
+      - name: base64-to-file
+        id: write_file
+        uses: timheuer/base64-to-file@v1.1
+        with:
+          fileName: "custom-config"
+          encodedString: ${{ secrets.KUBECTL_CONFIG }}
+
+      # Checkout the repository
+      - uses: actions/checkout@v4
+
+      # Deploy Kubernetes YAML
+      - run: helm upgrade --install fi-pv ./helm --kubeconfig ${{ steps.write_file.outputs.filePath }} --set runNumber=${{ github.run_number }}
