--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Backupverfahren",
         "Computingumgebung",
         "Dalwigk",
+        "fipv",
         "hervorsehbare",
         "Kommazahlen",
         "Loadbalancer",
